fix(web): add handle word wrap for message text

--- a/SocialWebApp/WebUI/ClientApp/src/app/pages/message-page/components/user-message/user-message.component.scss
+++ b/SocialWebApp/WebUI/ClientApp/src/app/pages/message-page/components/user-message/user-message.component.scss
@@ -4,7 +4,8 @@
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    max-width: 40%;
+    word-wrap: break-word;
     .message-text {
       border-radius: 20px;
       padding: 10px 20px;
@@ -27,6 +28,8 @@
 .send {
   .message-info {
     margin-left: auto;
+    align-items: flex-end;
+
     .message-text {
       color: var(--tui-accent-text);
       background: var(--tui-primary);
